layout fix on safari mobile

--- a/src/components/HistoricalUfcRankings.sass
+++ b/src/components/HistoricalUfcRankings.sass
@@ -1,7 +1,6 @@
 .main-view-container
     display: flex
     flex-direction: column
-    height: inherit
 
     .date
         margin: 0
