--- a/src/index.sass
+++ b/src/index.sass
@@ -14,15 +14,10 @@
     user-select: none
 
 html
-    height: 100vh
     width: 100vw
 
 body
     margin: 0
-    height: inherit
-
-#root
-    height: inherit
 
 .clickable
     cursor: pointer
